--- a/CPP_prac/CPP_prac/CPP_prac.vcxproj.filters
+++ b/CPP_prac/CPP_prac/CPP_prac.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClCompile Include="OOP_1.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="ch_2.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
