--- a/CPP_prac/CPP_prac/CPP_prac.vcxproj.filters
+++ b/CPP_prac/CPP_prac/CPP_prac.vcxproj.filters
@@ -21,6 +21,12 @@
     <ClInclude Include="ch1_test.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Calculator.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Printer.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -36,6 +42,15 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="ch_2.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="ch_3.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Calculator.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Printer.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
