--- a/CPP_prac/CPP_prac/CPP_prac.vcxproj
+++ b/CPP_prac/CPP_prac/CPP_prac.vcxproj
@@ -153,6 +153,7 @@
   <ItemGroup>
     <ClInclude Include="Calculator.h" />
     <ClInclude Include="ch1_test.h" />
+    <ClInclude Include="FruitSale.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Printer.h" />
   </ItemGroup>
@@ -162,6 +163,8 @@
     <ClCompile Include="ch_1_test.cpp" />
     <ClCompile Include="ch_2.cpp" />
     <ClCompile Include="ch_3.cpp" />
+    <ClCompile Include="ch_4.cpp" />
+    <ClCompile Include="FruitSale.cpp" />
     <ClCompile Include="OOP_1.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
