--- a/CPP_prac/CPP_prac/CPP_prac.vcxproj
+++ b/CPP_prac/CPP_prac/CPP_prac.vcxproj
@@ -166,6 +166,7 @@
     <ClCompile Include="ch_4.cpp" />
     <ClCompile Include="FruitSale.cpp" />
     <ClCompile Include="OOP_1.cpp" />
+    <ClCompile Include="OOP_2.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
