--- a/CPP_prac/CPP_prac/CPP_prac.vcxproj
+++ b/CPP_prac/CPP_prac/CPP_prac.vcxproj
@@ -164,9 +164,11 @@
     <ClCompile Include="ch_2.cpp" />
     <ClCompile Include="ch_3.cpp" />
     <ClCompile Include="ch_4.cpp" />
+    <ClCompile Include="ch_5.cpp" />
     <ClCompile Include="FruitSale.cpp" />
     <ClCompile Include="OOP_1.cpp" />
     <ClCompile Include="OOP_2.cpp" />
+    <ClCompile Include="OOP_3.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
