--- a/CPP_prac/CPP_prac/CPP_prac.vcxproj.filters
+++ b/CPP_prac/CPP_prac/CPP_prac.vcxproj.filters
@@ -71,5 +71,11 @@
     <ClCompile Include="OOP_3.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="ch_6.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="ch_7.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
