--- a/CPP_prac/CPP_prac/CPP_prac.vcxproj
+++ b/CPP_prac/CPP_prac/CPP_prac.vcxproj
@@ -168,6 +168,7 @@
     <ClCompile Include="Bankmain.cpp" />
     <ClCompile Include="Calculator.cpp" />
     <ClCompile Include="ch_1.cpp" />
+    <ClCompile Include="ch_10.cpp" />
     <ClCompile Include="ch_1_test.cpp" />
     <ClCompile Include="ch_2.cpp" />
     <ClCompile Include="ch_3.cpp" />
