--- a/CPP_prac/CPP_prac/CPP_prac.vcxproj.filters
+++ b/CPP_prac/CPP_prac/CPP_prac.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="BankingCommonDecl.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="AccountArray.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -114,6 +117,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="ch_11.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="AccountArray.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
