--- a/CPP_prac/CPP_prac/CPP_prac.vcxproj.filters
+++ b/CPP_prac/CPP_prac/CPP_prac.vcxproj.filters
@@ -122,5 +122,8 @@
     <ClCompile Include="AccountArray.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="ch_12.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
