--- a/CPP_prac/CPP_prac/CPP_prac.vcxproj
+++ b/CPP_prac/CPP_prac/CPP_prac.vcxproj
@@ -183,6 +183,8 @@
     <ClCompile Include="ch_7.cpp" />
     <ClCompile Include="ch_8.cpp" />
     <ClCompile Include="FruitSale.cpp" />
+    <ClCompile Include="HighCreditAccount.cpp" />
+    <ClCompile Include="NormalAccoun.cpp" />
     <ClCompile Include="OOP_5.cpp" />
     <ClCompile Include="OOP_1.cpp" />
     <ClCompile Include="OOP_2.cpp" />
