--- a/CPP_prac/CPP_prac/CPP_prac.vcxproj.filters
+++ b/CPP_prac/CPP_prac/CPP_prac.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClInclude Include="BoundCheckArr.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Exception.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -137,10 +140,10 @@
     <ClCompile Include="HighCreditAccount.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="NormalAccoun.cpp">
+    <ClCompile Include="ch_13.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="ch_13.cpp">
+    <ClCompile Include="NormalAccount.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
