--- a/CPP_prac/CPP_prac/CPP_prac.vcxproj
+++ b/CPP_prac/CPP_prac/CPP_prac.vcxproj
@@ -24,6 +24,7 @@
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>CPPprac</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
+    <ProjectName>  </ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -158,6 +159,7 @@
     <ClInclude Include="BoundCheckArr.h" />
     <ClInclude Include="Calculator.h" />
     <ClInclude Include="ch1_test.h" />
+    <ClInclude Include="Exception.h" />
     <ClInclude Include="FruitSale.h" />
     <ClInclude Include="HighCreditAccount.h" />
     <ClInclude Include="NormalAccount.h" />
@@ -186,7 +188,7 @@
     <ClCompile Include="ch_8.cpp" />
     <ClCompile Include="FruitSale.cpp" />
     <ClCompile Include="HighCreditAccount.cpp" />
-    <ClCompile Include="NormalAccoun.cpp" />
+    <ClCompile Include="NormalAccount.cpp" />
     <ClCompile Include="OOP_5.cpp" />
     <ClCompile Include="OOP_1.cpp" />
     <ClCompile Include="OOP_2.cpp" />
